welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:16: error: illegal start of simple expression
			}
                        ^noTriples:18: error: illegal start of simple expression
		}
                ^noTriples:20: error: illegal start of simple expression
	}
        ^