welcome.lessons.welcome.array.notriples.NoTriples.scala.code
def noTriples(nums:Array[Int]): Boolean = {
	var c = 0
	var r = 0
	var v = 0

	for (c <- 0 to nums.length - 1)
	{
		if (T(c) == r && c < nums.length - 3)
		{
			if(T(c+1) == r)
			{
				if (T(c+2) == r)
				{
					 r = 1
				}else 
			}
			else 
		}
		else 
	}

	if (r)
	{
		false
	}
	else true
}
